# TensorSeal_Android

./: .gitignore  README.md  requirements.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tensorseal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aes.h  native-lib.cpp
app/src/main/cpp/include/tensorflow/lite/c/: c_api.h  c_api_types.h  common.h
app/src/main/java/com/tensorseal/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tensorseal/: ExampleUnitTest.kt
factory/: Dockerfile  cloud_worker.py
gradle/wrapper/: gradle-wrapper.properties
tools/: tensorseal.py
